--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 streamlit
-langchain
-langchain-community
-langchain-openai
-faiss-cpu
-tiktoken
+python-dotenv
 python-dateutil
+langchain
+langchain-core
+langchain-google-genai
+langchain-community
+faiss-cpu
+pandas
+numpy
+vaderSentiment
+transformers
+torch
